tests/compile-fail/integration_suite__integration__general__unknown_variable.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unknown variable 'y'
   ┌─ <input>:27:15
   │
27 │       int x = y;  
   │               ^ not found in this scope


